# Brekora-HBMS

./: .env  .env.example  .gitignore  Agent_D_Frontend_Tasks.md  Agent_Task_Index.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  docker-compose.override.yml  docker-compose.yml  run_p0_tests.py  run_p0_tests.sh  run_remaining_p0.py
backend/: .coverage  .env  .env.example  Agent_A_Backend_Core_Tasks.md  Agent_B_Booking_Engine_Tasks.md  Agent_Task_Index.md  Dockerfile  alembic.ini  debug_pricing.py  entrypoint.sh  logging_config.json  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: exceptions.py  logging_config.py  main.py  worker.py
backend/scripts/: healthcheck_worker.py  reset_setup.py  seed_e2e.py  validate_env.py
backend/tests/: conftest.py  test_add_ons.py  test_addon_slots.py  test_airbnb_parser.py  test_auth.py  test_availability_addons.py  test_availability_rooms.py  test_booking_init.py  test_booking_modification.py  test_bookings.py  test_cancellation_policy.py  test_channels.py  test_concurrent_booking.py  test_db_fixture.py  test_feature_flags.py  test_gmail_oauth.py  test_gmail_poller.py  test_goibibo_parser.py  test_google_oauth.py  test_gst_service.py  test_health.py  test_ical_parser.py  test_inventory_buffer.py  test_inventory_service.py  test_logging.py  test_mmt_parser.py  test_mmt_parser_standalone.py  test_organization.py  test_ota_alerts.py  test_ota_auto_confirm.py  test_ota_mappings.py  test_ota_metrics.py  test_ota_queue.py  test_owner_pnl.py  test_packages.py  test_payment_confirmation.py  test_payments.py  (+12 more)
(+336 files in other folders)
